# wolproxypycli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  release.yml
config/: config.py
docs/: about.md  cli.md  index.md
tests/: test_wolproxycli.py
wolproxypycli/: __init__.py  __main__.py  main.py
