[tool.poetry]
name = "wolproxypycli"
version = "0.1.2"
description = "A PyPI module and Typer (CLI) app for sending Wake-On-LAN packets"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
wolproxypycli = "wolproxypycli.main:run"

[tool.poetry.dependencies]
python = "^3.9"
wakeonlan = "^2.1.0"
typer = "^0.4.0"
rich = "^10.16.1"
pretty-errors = "^1.2.25"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.920"
bandit = "^1.7.1"
pre-commit = "^2.16.0"
mkdocs = "^1.2.3"
mkdocstrings = "^0.16.2"
mkdocs-autorefs = "^0.3.0"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = ["B104","B610","B611","B702","B703"]
exclude_dirs = ["tests/"]

[tool.pydocstyle]
ignore = "D104,D203,D213,D406,D407,D413"
